--- a/form-GET.html
+++ b/form-GET.html
@@ -20,14 +20,13 @@
     <title>PHP Badwords</title>
   </head>
   <body>
-    <form>
+    <form action="index.php" method="GET">
       <div class="container mt-5">
         <div class="row">
           <div class="col">
             <div class="mb-3">
               <label for="testo" class="form-label">Testo</label>
-              <input type="text" class="form-control" id="testo" name="testo" />
-              <div id="textHelp" class="form-text">Inserisci il testo</div>
+              <textarea id="testo" name="testo" />
             </div>
 
             <div class="mb-3">
@@ -38,7 +37,7 @@
                 type="text"
                 class="form-control"
                 id="badword"
-                names="badword"
+                name="badword"
               />
             </div>
 
