--- a/index.html
+++ b/index.html
@@ -20,31 +20,27 @@
     <title>PHP Badwords</title>
   </head>
   <body>
-    <form action="index.php" method="GET">
-      <div class="container mt-5">
-        <div class="row">
-          <div class="col">
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col">
+          <form action="action.php">
             <div class="mb-3">
-              <label for="testo" class="form-label">Testo</label>
-              <textarea id="testo" name="testo" />
-            </div>
-
-            <div class="mb-3">
-              <label for="badword" class="form-label"
-                >Inserisci la BadWord</label
+              <label for="paragraph" class="form-label"
+                >Inserisci il testo:</label
               >
-              <input
-                type="text"
-                class="form-control"
-                id="badword"
-                name="badword"
-              />
+              <textarea class="form-control" id="paragraph"></textarea>
             </div>
-
+            <div class="mb-3">
+              <label for="BadWord" class="form-label"
+                >Inserisci la BadWord:</label
+              >
+              <input type="text" class="form-control" id="BadWord" />
+            </div>
             <button type="submit" class="btn btn-primary">Invia</button>
-          </div>
+          </form>
         </div>
       </div>
-    </form>
+    </div>
+    <!-- creo il form -->
   </body>
 </html>
