--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container mt-5">
       <div class="row">
         <div class="col">
-          <form action="action.php" method="get">
+          <form action="action.php" method="post">
             <div class="mb-3">
               <label for="paragraph" class="form-label"
                 >Inserisci il testo:</label
